# RustJourney

./: .gitignore  README.md
actix-sim-yt/: Cargo.toml  README.md
actix-sim-yt/src/: add.rhai  main.rs  multiply.rhai
adder/src/: lib.rs
adder/tests/: another_integration_tests.rs  integration_test.rs
api-call-yt/: Cargo.toml  README.md
api-call-yt/src/: main.rs
asc/: Cargo.toml
asc/src/: main.rs
async-rust-yt/: Cargo.toml  README.md
async-rust-yt/src/: main.rs
async_await_demo/: Cargo.toml
async_await_demo/src/: main.rs
async_demo/: Cargo.toml
async_demo/src/: main.rs
asynctimer/: Cargo.toml
asynctimer/src/: main.rs
atomic_demo/: Cargo.toml
atomic_demo/src/: main copy.rs  main.rs
auth-yt/: Cargo.toml  README.md
auth-yt/src/: main.rs
axum-live/: Cargo.toml
axum-live/examples/: basic.http  basic.rs
basic/: Cargo.toml
basic/examples/: generate.rs  sql.rs
basic/fixtures/: person.json  person1.json  person2.json
basic/src/: json_schema.rs  lib.rs
basic/templates/: code.j2
bubble_sorting_rust/: Cargo.toml  README.md
bubble_sorting_rust/src/: main.rs
builder/: Cargo.toml
builder/examples/: command.rs
builder/src/: builder.rs  lib.rs
bulls_and_cows/: Cargo.toml
bulls_and_cows/src/: main.rs
cell/src/: main copy 2.rs  main copy.rs  main.rs  main1.rs  main3.rs  main4.rs  mutex.rs  mutex2.rs  refcell.rs
closure/: Cargo.toml
closure/src/: lib.rs  lib1.rs  main.rs  main1.rs
db/: Cargo.toml  db.sql
db/src/: main.rs
demo-warp/: Cargo.toml  README.md  dev.http
demo-warp/src/: main.rs  security.rs  todo_rest.rs
demo-warp/web-folder/: index.html
demo/src/: area.rs  main.rs
diesel_demo/: .env  README.md
diesel_demo/src/: schema.rs
dioxus-live/: Cargo.toml  index.html
dioxus-live/src/: lib.rs  main.rs  style.css
enum_demo/src/: main.rs
flappy/src/: main.rs
gd32demo/: Cargo.toml  GD32F30x_HD.svd  memory.x  openocd.cfg
gd32demo/src/: main.rs
get-req-yt/: Cargo.toml  README.md
get-req-yt/src/: main.rs
hello/: hello.html
hello/src/: lib.rs  main.rs
hello_cargo/src/: main.rs
hello_macro/src/: main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
hello_world/: main
helloworld/: README.md
helloworld/src/: main.rs
img-yt/src/: main.rs
it/src/: lib.rs
kv/: Cargo.toml  abi.proto
kv/src/: client.rs  noise_codec.rs  server.rs
kv/src/pb/: abi.rs  mod.rs
links-extract-yt/: Cargo.toml  README.md
links-extract-yt/src/: main.rs
lists/: README.md
lists/src/: first.rs  second.rs
match_demo/src/: main.rs
my-project/: Cargo.toml
my-project/src/: lib.rs  main.rs  upload.rs
owner/src/: main.rs
p2p/: Cargo.toml
p2p/src/: main.rs
package_crate_demo/: Cargo.toml
pancakes/: Cargo.toml
particles/: Cargo.toml  alloc.tsv
particles/src/: main.rs
point_demo/: Cargo.toml
point_demo/src/: main.rs
pow/: Cargo.toml  abi.proto
pow/src/: client.rs  server.rs
pow/src/pb/: abi.rs
prost-live/: Cargo.toml  build.rs  person.proto
prost-live/examples/: person.rs
prost-live/src/: lib.rs
prost-live/src/pb/: mod.rs  person.rs
queryer/: Cargo.toml
queryer/examples/: covid.rs
queryer/src/: convert.rs  lib.rs
refdemo/: Cargo.toml
refdemo/src/: main.rs
rust-bacon/: Cargo.toml
rust-bacon/examples/: simple.rs
rust-bacon/tests/: tests_p_simple.rs
rust-base64-demo/: Cargo.toml  README.md
rust-base64-demo/src/: main.rs
rust-embedded-demo/: Cargo.toml  openocd.cfg
rust-embedded-demo/src/: main.rs
rust-fb-yt/: Cargo.toml  README.md
rust-fb-yt/src/: main.rs
rust-invaders-yt/: Cargo.toml
rust-invaders-yt/src/: main.rs
rust-redis/: Cargo.toml  README.md
rust-redis/src/: main.rs
rust_study_01/: Cargo.toml
rust_study_01/src/: main.rs
s1/httpserver/: Cargo.toml
scoped_threads/src/: main.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
share-data/: Cargo.toml
share-data/src/: main.rs
slice/src/: main.rs  struct.rs  (+1 more)
tlearn/: Cargo.toml
tlearn/src/: main.rs
training_code/: Cargo.toml
training_code/src/: actor.rs  encoder.rs  fibonacci.rs  strtok.rs  ticket.rs  user.rs
tutor/: Cargo.toml
variable_demo/: Cargo.toml
vector_demo/: Cargo.toml
wasm-game-of-life/: Cargo.toml
web2image/: Cargo.toml
web2image/src/: main.rs  web2image.rs
(+32 files in other folders)
