[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
heck = "0.4.1"
litrs = "0.4.0"
serde ={ version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
