[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.11.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.9"
dashmap = "5.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.2.25"
tokio-util ={ version = "0.7.8", features = ["codec"]}
futures = "0.3.28"
bytes = "1.4.0"
regex = { version = "1.9.1", features = ["unicode"] }
snow = "0.9.2"
# async-trait = "0.1.72"

[build-dependencies]
prost-build = "0.11.9"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
