[package]
name = "prost-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.4.0"
prost = "0.12.0"
prost-types = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies] # https://doc.rust-lang.org/cargo/commands/cargo-add.html
prost-build = "0.12.0"
