[package]
name = "web2image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.0"
headless_chrome = "1.0.5"
image = "0.24.7"
qrcode = "0.12.0"
url = "2.4.0"
failure = "0.1"
